2001-09-15  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* configure.in: stepped version to 0.11.1.

2001-09-14  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* tty.c: conditionalize definition of ospeed on HAVE_DECL_OSPEED.
	* getaddrinfo.c: adapt to new define name HAVE_DECL_H_ERRNO.
	* configure.in (LIBS): use NIH_CHECK_DECL to check for h_errno in
	netdb.h and ospeed in termcap.h.
	* acinclude.m4 (NIH_CEHCK_DECL): new macro.

2001-09-12  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* configure.in: stepped version to 0.11.

2001-08-17  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* tag.h: only declare tags in header, don't define it.
	* tty.h: only declare tty_am in header, don't define it.

	* sockets.c (sockaddr_ntop): choose implementation based on
	availability of getnameinfo.
	* configure.in: check for availability of getnameinfo.

	* signals.c (sig_remember): reinstall signal handler.

	* keys.c, keys.h: rename keyname to key_name to avoid conflict
	with some termcap libraries.

	* strdup.c: include <stdlib.h> for malloc() prototype.

	* tty.c (tty_putp): buf is only used with tparam, so only define
	it in that case.

	* fn_tag.c (fn_tag): strcmp returns int, so compare with 0.

	* tty.c: if we're using tparam replacement, declare it.

	* tty.c (tty_put0): new function (was macro), adapt users.
	* tty.h: remove prototype for fputchar().  make tty_put0() a
	function and adapt using macros.

	* tty.c: if present, include termcap.h.  Adapt for gratuitous
	differences of termcap implementations.
	* configure.in: check for termcap.h if using libtermcap.  Set one
	of USE_TERMCAP, USE_CURSES, or USE_NCURSES to indicate which lib
	we're using.

2001-08-01  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* ftp.c (ftp_retr): set *sizep to -1 if we cannot extract a size
	from the response.

2001-07-31  Dieter Baron  <dillo@danbala.tuwien.ac.at>

	* sockets.c (sopen): don't include '\n' in disp_status message.

2001-07-30  Dieter Baron  <dillo@danbala.tuwien.ac.at>
